--- a/tmux.conf
+++ b/tmux.conf
@@ -10,6 +10,13 @@ bind ` send-prefix
 # Mostly for powerline
 set -g default-terminal "screen-256color"
 
+# Automatically renumber windows when deleting one in the middle
+set-option -g renumber-windows on
+
+# Update the SSH_AUTH_SOCK dynamically
+setenv -g SSH_AUTH_SOCK $HOME/.ssh/ssh_auth_sock
+set -g update-environment -r
+
 # split panes using | and -
 bind | split-window -h
 bind - split-window -v
