--- a/tmux.conf
+++ b/tmux.conf
@@ -14,8 +14,8 @@ set -g default-terminal "screen-256color"
 set-option -g renumber-windows on
 
 # Update the SSH_AUTH_SOCK dynamically
-setenv -g SSH_AUTH_SOCK $HOME/.ssh/ssh_auth_sock
-set -g update-environment -r
+set-environment -g SSH_AUTH_SOCK $HOME/.ssh/ssh-auth-sock
+set -g update-environment SSH_AUTH_SOCK
 
 # split panes using | and -
 bind | split-window -h
