--- a/tmux.conf
+++ b/tmux.conf
@@ -38,12 +38,12 @@ set -g set-titles-string '#(whoami)::#h::'
 #set -g status-utf8 on
 set -g status-bg black
 set -g status-fg white
-set -g status-interval 5
+set -g status-interval 1
 set -g status-left-length 90
 set -g status-right-length 60
 set -g status-left "#[fg=Green]#(whoami)#[fg=white]::#[fg=blue]#(hostname -s)#[fg=white]::##[fg=yellow]#"
 set -g status-justify left
-set -g status-right '#[fg=Cyan]#S #[fg=white]%a %d %b %R'
+set -g status-right '#[fg=Cyan]#(cd #{pane_current_path}; git rev-parse --abbrev-ref HEAD) #[fg=white]%a %d %b %R'
 
 # Remap window navigation to vim
 unbind-key j
