--- a/tmux.conf
+++ b/tmux.conf
@@ -4,7 +4,7 @@ set-option -g prefix `
 bind ` send-prefix
 
 # Enable mouse mode (tmux 2.1 and above)
-#set -g mouse on
+set -g -q mouse on
 
 # Tell tmux that it has 256-color capabilities
 # Mostly for powerline
@@ -38,7 +38,7 @@ set -g set-titles-string '#(whoami)::#h::'
 #set -g status-utf8 on
 set -g status-bg black
 set -g status-fg white
-set -g status-interval 1
+set -g status-interval 3
 set -g status-left-length 90
 set -g status-right-length 60
 set -g status-left "#[fg=Green]#(whoami)#[fg=white]::#[fg=blue]#(hostname -s)#[fg=white]::##[fg=yellow]#"
@@ -60,3 +60,6 @@ set-option -g history-limit 10000
 
 # Notify on window activity
 setw -g monitor-activity on
+
+# Use vi keybindings
+set-window-option mode-keys vi
