--- a/tmux.conf
+++ b/tmux.conf
@@ -62,4 +62,4 @@ set-option -g history-limit 10000
 setw -g monitor-activity on
 
 # Use vi keybindings
-set-window-option mode-keys vi
+#set-window-option mode-keys vi
