--- a/tmux.conf
+++ b/tmux.conf
@@ -55,6 +55,10 @@ bind-key h select-pane -L
 unbind-key l
 bind-key l select-pane -R
 
+# Move windows
+bind-key Left swap-window -t -1
+bind-key Right swap-window -t +1
+
 # Increase scroll back buffer
 set-option -g history-limit 10000
 
