--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -41,9 +41,17 @@ set -g status-fg white
 set -g status-interval 3
 set -g status-left-length 90
 set -g status-right-length 60
-set -g status-left "#[fg=Green]#(whoami)#[fg=white]::#[fg=blue]#(hostname -s)#[fg=white]::##[fg=yellow]#"
+set -g status-left "#[fg=green]>>> "
 set -g status-justify left
 set -g status-right '#[fg=Cyan]#(cd #{pane_current_path}; git rev-parse --abbrev-ref HEAD) #[fg=white]%a %d %b %R'
+
+setw -g window-status-current-fg white
+setw -g window-status-current-attr bold
+setw -g window-status-current-format "#[fg=red][#[fg=white]#I:#W#[fg=cyan]#F#[fg=red]] "
+
+setw -g window-status-current-fg white
+setw -g window-status-current-attr none
+setw -g window-status-current-format "#I:#W#[fg=cyan]#F "
 
 # Remap window navigation to vim
 unbind-key j
