Fix window-status-current-* to window-status-*

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -49,9 +49,9 @@ setw -g window-status-current-fg white
 setw -g window-status-current-attr bold
 setw -g window-status-current-format "#[fg=red][#[fg=white]#I:#W#[fg=cyan]#F#[fg=red]] "
 
-setw -g window-status-current-fg white
-setw -g window-status-current-attr none
-setw -g window-status-current-format "#I:#W#[fg=cyan]#F "
+setw -g window-status-fg white
+setw -g window-status-attr none
+setw -g window-status-format "#I:#W#[fg=cyan]#F "
 
 # Remap window navigation to vim
 unbind-key j
