--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -32,7 +32,7 @@ bind r source-file ~/.tmux.conf
 
 # Rename your terminals
 set -g set-titles on
-set -g set-titles-string '#(whoami)::#h::'
+set -g set-titles-string '#{pane_current_path}'
 
 # Status bar customization
 #set -g status-utf8 on
@@ -42,15 +42,16 @@ set -g status-interval 3
 set -g status-left-length 90
 set -g status-right-length 60
 set -g status-left "#[fg=green]>>> "
-set -g status-justify left
-set -g status-right '#[fg=Cyan]#(cd #{pane_current_path}; git rev-parse --abbrev-ref HEAD) #[fg=white]%a %d %b %R'
+set -g status-left ""
+set -g status-justify centre
+set -g status-right '#[fg=colour34]#(cd #{pane_current_path}; git rev-parse --abbrev-ref HEAD) #[fg=white]%a %d %b %R'
 
-setw -g window-status-current-fg white
-setw -g window-status-current-attr bold
-setw -g window-status-current-format "#[fg=red][#[fg=white]#I:#W#[fg=cyan]#F#[fg=red]] "
+setw -g window-status-current-fg white #colour223
+setw -g window-status-current-bg default
+setw -g window-status-current-format "#[fg=colour88](#[fg=default]#I:#W#[fg=cyan]#F#[fg=colour88]) "
 
-setw -g window-status-fg white
-setw -g window-status-attr none
+setw -g window-status-fg colour240
+setw -g window-status-bg default
 setw -g window-status-format "#I:#W#[fg=cyan]#F "
 
 # Remap window navigation to vim
@@ -68,7 +69,7 @@ bind-key Left swap-window -t -1
 bind-key Right swap-window -t +1
 
 # Increase scroll back buffer
-set-option -g history-limit 10000
+set-option -g history-limit 25000
 
 # Notify on window activity
 setw -g monitor-activity on
