--- a/bash/.local/Dockerfile
+++ b/bash/.local/Dockerfile
@@ -6,6 +6,6 @@ ARG GID
 ARG USERNAME
 
 RUN apt-get update \
- && apt-get install -y sudo git tmux vim python3 \
+ && apt-get install -y sudo git tmux vim man python3-pip \
  && echo "%sudo ALL=(ALL) NOPASSWD: ALL" >> /etc/sudoers \
  && useradd -u $UID -g $GID -G sudo -m $USERNAME
