--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -41,18 +41,18 @@ set -g status-fg white
 set -g status-interval 3
 set -g status-left-length 90
 set -g status-right-length 60
-set -g status-left "#[fg=green]>>> "
 set -g status-left ""
 set -g status-justify centre
 set -g status-right '#[fg=colour34]#(cd #{pane_current_path}; git rev-parse --abbrev-ref HEAD) #[fg=white]%a %d %b %R'
 
 setw -g window-status-current-fg white #colour223
-setw -g window-status-current-bg default
+setw -g window-status-current-bg black
 setw -g window-status-current-format "#[fg=colour88](#[fg=default]#I:#W#[fg=cyan]#F#[fg=colour88]) "
 
 setw -g window-status-fg colour240
-setw -g window-status-bg default
-setw -g window-status-format "#I:#W#[fg=cyan]#F "
+setw -g window-status-bg black
+setw -g window-status-attr none
+setw -g window-status-format "#[fg=default,noreverse]#I:#W#[fg=cyan]#F "
 
 # Remap window navigation to vim
 unbind-key j
