Update bashrc and tmux.conf

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -41,7 +41,7 @@ set -g status-fg white
 set -g status-interval 3
 set -g status-left-length 90
 set -g status-right-length 60
-set -g status-left ""
+set -g status-left "#[fg=colour32]#S"
 set -g status-justify centre
 set -g status-right '#[fg=colour34]#(cd #{pane_current_path}; git rev-parse --abbrev-ref HEAD) #[fg=white]%a %d %b %R'
 
@@ -64,6 +64,12 @@ bind-key h select-pane -L
 unbind-key l
 bind-key l select-pane -R
 
+# Map session keys
+unbind-key N
+bind-key N new-session -t default
+unbind-key K
+bind-key K kill-session
+
 # Move windows
 bind-key Left swap-window -t -1
 bind-key Right swap-window -t +1
@@ -73,6 +79,3 @@ set-option -g history-limit 25000
 
 # Notify on window activity
 setw -g monitor-activity on
-
-# Use vi keybindings
-#set-window-option mode-keys vi
