--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -43,32 +43,13 @@ set -g status-left-length 90
 set -g status-right-length 60
 set -g status-left "#[fg=colour32]#S"
 set -g status-justify centre
-set -g status-right '#[fg=colour34]#(cd #{pane_current_path}; git rev-parse --abbrev-ref HEAD) #[fg=white]%a %d %b %R'
+set -g status-right '#[fg=colour34]#(cd #{pane_current_path}; git rev-parse --abbrev-ref HEAD) #[fg=white]%Y%m%d %R'
 
-setw -g window-status-current-fg white #colour223
-setw -g window-status-current-bg black
+setw -g window-status-current-style fg=white,bg=black
 setw -g window-status-current-format "#[fg=colour88](#[fg=default]#I:#W#[fg=cyan]#F#[fg=colour88]) "
 
-setw -g window-status-fg colour240
-setw -g window-status-bg black
-setw -g window-status-attr none
+setw -g window-status-style fg=colour240,bg=black,none
 setw -g window-status-format "#[fg=default,noreverse]#I:#W#[fg=cyan]#F "
-
-# Remap window navigation to vim
-unbind-key j
-bind-key j select-pane -D
-unbind-key k
-bind-key k select-pane -U
-unbind-key h
-bind-key h select-pane -L
-unbind-key l
-bind-key l select-pane -R
-
-# Map session keys
-unbind-key N
-bind-key N new-session -t default
-unbind-key K
-bind-key K kill-session
 
 # Move windows
 bind-key Left swap-window -t -1
