--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "vim/bundle/Vundle.vim"]
-	path = vim/.vim/bundle/Vundle.vim
-	url = https://github.com/VundleVim/Vundle.vim.git
+[submodule "vim/pack/airblade/start"]
+	path = vim/.vim/pack/airblade/start
+	url = https://github.com/airblade/vim-gitgutter.git
