--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -32,7 +32,7 @@ bind r source-file ~/.tmux.conf
 
 # Rename your terminals
 set -g set-titles on
-set -g set-titles-string '#{pane_current_path}'
+set -g set-titles-string '#{pane_current_path} | #{pane_current_command}'
 
 # Status bar customization
 #set -g status-utf8 on
