--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,7 @@
-[submodule "vim/pack/airblade/start"]
+[submodule "vim/.vim/pack/airblade/start"]
 	path = vim/.vim/pack/airblade/start
 	url = https://github.com/airblade/vim-gitgutter.git
+
+[submodule "vim/.vim/pack/jnurmine/start"]
+    path = vim/.vim/pack/jnurmine/start
+    url = https://github.com/jnurmine/Zenburn
