--- a/.gitmodules
+++ b/.gitmodules
@@ -1,7 +1,7 @@
-[submodule "vim/.vim/pack/airblade/start"]
+[submodule "vim-gitgutter"]
 	path = vim/.vim/pack/airblade/start
 	url = https://github.com/airblade/vim-gitgutter.git
 
-[submodule "vim/.vim/pack/jnurmine/start"]
+[submodule "zenburn"]
     path = vim/.vim/pack/jnurmine/start
     url = https://github.com/jnurmine/Zenburn
