--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
-[submodule "vim/.vim/pack/airblade/start"]
-	path = vim/.vim/pack/airblade/start
-	url = https://github.com/airblade/vim-gitgutter.git
-[submodule "vim/.vim/pack/jnurmine/start"]
-	path = vim/.vim/pack/jnurmine/start
+[submodule "vim/.vim/pack/jnurmine/start/zenburn"]
+	path = vim/.vim/pack/jnurmine/start/zenburn
 	url = https://github.com/jnurmine/Zenburn
+[submodule "vim/.vim/pack/airblade/start/vim-gitgutter"]
+	path = vim/.vim/pack/airblade/start/vim-gitgutter
+	url = https://github.com/airblade/vim-gitgutter.git
