--- a/bash/.local/Dockerfile
+++ b/bash/.local/Dockerfile
@@ -1,4 +1,4 @@
-FROM "library/ubuntu:18.04"
+FROM ubuntu:22.04
 
 ARG UID
 ARG GID
@@ -7,5 +7,4 @@ ARG USERNAME
 RUN apt-get update \
  && apt-get install -y sudo git tmux vim man python3-pip curl locales-all \
  && echo "%sudo ALL=(ALL) NOPASSWD: ALL" >> /etc/sudoers \
- && useradd -u $UID -g $GID -G sudo -m $USERNAME
-# && sh -c "$(curl -fsSL https://raw.githubusercontent.com/Linuxbrew/install/master/install.sh)"
+ && useradd -u $UID -U -G sudo -m $USERNAME
