--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -60,3 +60,12 @@ set-option -g history-limit 25000
 
 # Notify on window activity
 setw -g monitor-activity on
+
+# List of plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tmux-yank'
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
+
