--- a/.gitmodules
+++ b/.gitmodules
@@ -1,7 +1,9 @@
-[submodule "vim/.vim/pack/rakuyo/start/vim-storm"]
-	path = vim/.vim/pack/rakuyo/start/vim-storm
-	url = https://github.com/rakuy0/vim-storm
-[submodule "tmux/.tmux/plugins/tpm/tpm"]
-	path = tmux/.tmux/plugins/tpm/tpm
+[submodule ".config/alacritty/themes"]
+	path = .config/alacritty/themes
+	url = https://github.com/alacritty/alacritty-theme
+[submodule ".tmux/plugins/tpm"]
+	path = .tmux/plugins/tpm
 	url = https://github.com/tmux-plugins/tpm
-
+[submodule ".vim/pack/rakuyo/start/vim-storm"]
+	path = .vim/pack/rakuyo/start/vim-storm
+	url = https://github.com/rakuy0/vim-storm
