--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,1 +1,70 @@
-.dotfiles/tmux/.tmux.conf
+# Re-map the prefix to backtick
+unbind C-b
+set-option -g prefix `
+bind ` send-prefix
+
+# Enable mouse mode (tmux 2.1 and above)
+set -g -q mouse on
+
+# Tell tmux that it has 256-color capabilities
+# Mostly for powerline
+set -g default-terminal "screen-256color"
+
+# Automatically renumber windows when deleting one in the middle
+set-option -g renumber-windows on
+
+# Update the SSH_AUTH_SOCK dynamically
+set-environment -g SSH_AUTH_SOCK $HOME/.ssh/ssh-auth-sock
+set -g update-environment SSH_AUTH_SOCK
+
+# split panes using | and -
+bind | split-window -h
+bind - split-window -v
+
+# Start window number at 1 instead of 0
+#set -g base-index 1
+
+# Faster command sequences
+set -s escape-time 0
+
+# Set a shortcut for reloading your tmux config
+bind r source-file ~/.tmux.conf
+
+# Rename your terminals
+set -g set-titles on
+set -g set-titles-string '#{pane_current_path} | #{pane_current_command}'
+
+# Status bar customization
+#set -g status-utf8 on
+set -g status-bg black
+set -g status-fg white
+set -g status-interval 3
+set -g status-left-length 90
+set -g status-right-length 60
+set -g status-left "#[fg=colour32]#S"
+set -g status-justify centre
+set -g status-right '#[fg=colour34]#(cd #{pane_current_path}; git rev-parse --abbrev-ref HEAD) #[fg=white]%Y%m%d %R'
+
+setw -g window-status-current-style fg=white,bg=black
+setw -g window-status-current-format "#[fg=colour88](#[fg=default]#I:#W#[fg=cyan]#F#[fg=colour88]) "
+
+setw -g window-status-style fg=colour240,bg=black,none
+setw -g window-status-format "#[fg=default,noreverse]#I:#W#[fg=cyan]#F "
+
+# Move windows
+bind-key Left swap-window -t -1
+bind-key Right swap-window -t +1
+
+# Increase scroll back buffer
+set-option -g history-limit 25000
+
+# Notify on window activity
+setw -g monitor-activity on
+
+# List of plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'nhdaly/tmux-better-mouse-mode'
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
+
