--- a/.tmux.conf
+++ b/.tmux.conf
@@ -3,6 +3,9 @@ unbind C-b
 set-option -g prefix `
 bind ` send-prefix
 
+# 24-bit true colors inside tmux
+set -ga terminal-overrides ',xterm-256color:Tc'
+
 # Enable mouse mode (tmux 2.1 and above)
 set -g -q mouse on
 
