--- a/.tmux.conf
+++ b/.tmux.conf
@@ -4,7 +4,8 @@ set-option -g prefix `
 bind ` send-prefix
 
 # 24-bit true colors inside tmux
-set -ga terminal-overrides ',xterm-256color:Tc'
+set -ga terminal-overrides ',alacritty:Tc'
+set -as terminal-features ",alacritty*:RGB"
 
 # Enable mouse mode (tmux 2.1 and above)
 set -g -q mouse on
@@ -38,21 +39,19 @@ set -g set-titles on
 set -g set-titles-string '#{pane_current_path} | #{pane_current_command}'
 
 # Status bar customization
-#set -g status-utf8 on
-set -g status-bg black
-set -g status-fg white
+set -g status-style fg=white,bg=#080808
 set -g status-interval 3
 set -g status-left-length 90
 set -g status-right-length 60
-set -g status-left "#[fg=colour32]#S"
-set -g status-justify centre
-set -g status-right '#[fg=colour34]#(cd #{pane_current_path}; git rev-parse --abbrev-ref HEAD) #[fg=white]%Y%m%d %R'
+set -g status-left "#[fg=blue]#S:#I.#P#[fg=darkred] | #[fg=orange]#{pane_current_path}"
+set -g status-justify absolute-centre
+set -g status-right '#[fg=green]#(cd #{pane_current_path}; git rev-parse --abbrev-ref HEAD || echo "--")#[fg=darkred] | #[fg=blue]%Y%m%d %R'
 
-setw -g window-status-current-style fg=white,bg=black
-setw -g window-status-current-format "#[fg=colour88](#[fg=default]#I:#W#[fg=cyan]#F#[fg=colour88]) "
+#setw -g window-status-current-style fg=white,bg=black
+setw -g window-status-current-format "#[fg=darkred][#[fg=blue]#I#[fg=colour239]:#[fg=white]#W#[fg=green]#F#[fg=darkred]]"
 
-setw -g window-status-style fg=colour240,bg=black,none
-setw -g window-status-format "#[fg=default,noreverse]#I:#W#[fg=cyan]#F "
+#setw -g window-status-style fg=colour240,bg=black,none
+setw -g window-status-format "#[fg=blue]#I#[fg=colour239]:#W#[fg=green]#F"
 
 # Move windows
 bind-key Left swap-window -t -1
@@ -70,4 +69,3 @@ set -g @plugin 'nhdaly/tmux-better-mouse-mode'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
-
