--- a/.tmux.conf
+++ b/.tmux.conf
@@ -62,6 +62,7 @@ set-option -g history-limit 25000
 
 # Notify on window activity
 setw -g monitor-activity on
+setw -g window-status-activity-style curly-underscore
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
