--- a/.config/alacritty/alacritty.toml
+++ b/.config/alacritty/alacritty.toml
@@ -9,8 +9,8 @@ startup_mode = "Maximized"
 
 [font]
 normal = { family = "JetBrains Mono" }
-#normal = { family = "Fira Code Medium" }
-size = 10
+#normal = { family = "Fira Code" }
+size = 9
 
 [colors]
 transparent_background_colors = true
