--- a/.tmux.conf
+++ b/.tmux.conf
@@ -40,12 +40,21 @@ set -g set-titles-string '#{pane_current_path} | #{pane_current_command}'
 
 # Status bar customization
 set -g status-style fg=white,bg=#080808
-set -g status-interval 1
+set -g status-interval 2
 set -g status-left-length 90
-set -g status-right-length 60
-set -g status-left "#[fg=blue]#S:#I.#P#[fg=darkred] | #[fg=orange]#{pane_current_path}"
+set -g status-right-length 90
+set -g status-left "#[fg=blue]#S:#I.#P\
+#[fg=darkred] | \
+#[fg=orange]#{pane_current_path}\
+#[fg=darkred] | \
+#[fg=green]#{pane_current_command}"
+
 set -g status-justify absolute-centre
-set -g status-right '#[fg=green]#(cd #{pane_current_path}; git rev-parse --abbrev-ref HEAD || echo "--")#[fg=darkred] | #[fg=blue]%Y%m%d %R'
+set -g status-right "#[fg=green]#(cd #{pane_current_path}; git rev-parse --abbrev-ref HEAD || echo '--')\
+#[fg=darkred] | \
+#[fg=orange]#(uptime | awk '{printf \$(NF-2)\" \"\$(NF-1)\" \"\$(NF)}\')\
+#[fg=darkred] | \
+#[fg=blue]%Y%m%d %R"
 
 #setw -g window-status-current-style fg=white,bg=black
 setw -g window-status-current-format "#[fg=darkred][#[fg=blue]#I#[fg=colour239]:#[fg=white]#W#[fg=green]#F#[fg=darkred]]"
