--- a/.config/alacritty/alacritty.toml
+++ b/.config/alacritty/alacritty.toml
@@ -1,7 +1,3 @@
-import = [
-    "~/.config/alacritty/moonfly.toml"
-    #"~/.config/alacritty/themes/google.toml"
-]
 
 [window]
 opacity = 0.90
@@ -51,3 +47,9 @@ post_processing = true
 persist = false
 mouse.enabled = true
 regex = "(ipfs:|ipns:|magnet:|mailto:|gemini://|gopher://|https://|http://|news:|file:|git://|ssh:|ftp://)[^\u0000-\u001F\u007F-\u009F<>\"\\s{-}\\^⟨⟩`]+"
+
+[general]
+import = [
+    "~/.config/alacritty/moonfly.toml"
+    #"~/.config/alacritty/themes/google.toml"
+]
