--- a/.gitconfig
+++ b/.gitconfig
@@ -1,3 +1,12 @@
 [alias]
 	st = status
 	stat = status
+[user]
+	email = blackout@vertex.link
+	name = Michael Squires
+[pull]
+	rebase = false
+[push]
+	autoSetupRemote = true
+[fetch]
+	prune = true
