--- a/.tmux.conf
+++ b/.tmux.conf
@@ -75,6 +75,7 @@ setw -g window-status-activity-style curly-underscore
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'nhdaly/tmux-better-mouse-mode'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
