--- a/.tmux.conf
+++ b/.tmux.conf
@@ -45,7 +45,7 @@ set -g status-left-length 90
 set -g status-right-length 90
 set -g status-left "#[fg=blue]#S:#I.#P\
 #[fg=darkred] | \
-#[fg=orange]#{pane_current_path}\
+#[fg=orange]#(dirabbrev.py #{pane_current_path})\
 #[fg=darkred] | \
 #[fg=green]#{pane_current_command}"
 
@@ -54,7 +54,7 @@ set -g status-right "#[fg=green]#(cd #{pane_current_path}; git rev-parse --abbre
 #[fg=darkred] | \
 #[fg=orange]#(uptime | awk '{printf \$(NF-2)\" \"\$(NF-1)\" \"\$(NF)}\')\
 #[fg=darkred] | \
-#[fg=blue]%Y%m%d %R"
+#[fg=blue]%b %d | %R"
 
 #setw -g window-status-current-style fg=white,bg=black
 setw -g window-status-current-format "#[fg=darkred][#[fg=blue]#I#[fg=colour239]:#[fg=white]#W#[fg=green]#F#[fg=darkred]]"
