--- a/.tmux.conf
+++ b/.tmux.conf
@@ -18,8 +18,8 @@ set -g default-terminal "screen-256color"
 set-option -g renumber-windows on
 
 # split panes using | and -
-bind | split-window -h
-bind - split-window -v
+bind | split-window -h -c "#{pane_current_path}"
+bind '"' split-window -v -c "#{pane_current_path}"
 
 # Start window number at 1 instead of 0
 #set -g base-index 1
