--- a/.tmux.conf
+++ b/.tmux.conf
@@ -34,6 +34,11 @@ bind r source-file ~/.tmux.conf
 set -g set-titles on
 set -g set-titles-string '#{pane_current_path} | #{pane_current_command}'
 
+# Automatic window names
+set -g allow-rename on
+set -g automatic-rename on
+set -g automatic-rename-format '#(tmux-dirname #{pane_current_path})'
+
 # Status bar customization
 set -g status-style fg=white,bg=#080808
 set -g status-interval 2
@@ -41,7 +46,7 @@ set -g status-left-length 90
 set -g status-right-length 90
 set -g status-left "#[fg=blue]#S:#I.#P\
 #[fg=darkred] | \
-#[fg=orange]#(dirabbrev.py #{pane_current_path})\
+#[fg=orange]#(tmux-dirabbrev.py #{pane_current_path})\
 #[fg=darkred] | \
 #[fg=green]#{pane_current_command}"
 
