--- a/.tmux.conf
+++ b/.tmux.conf
@@ -78,6 +78,7 @@ setw -g window-status-activity-style curly-underscore
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'nhdaly/tmux-better-mouse-mode'
+#set -g @scroll-down-exit-copy-mode off
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
